--- a/Vanrise/Code/Vanrise.Web/Client/CSViews/Security/Login.cshtml
+++ b/Vanrise/Code/Vanrise.Web/Client/CSViews/Security/Login.cshtml
@@ -15,16 +15,16 @@
 </head>
 <body ng-controller="loginCtrl">
 
-    <nav class="navbar navbar-inverse navbar-fixed-top vr-nav-custom">
+    @*<nav class="navbar navbar-inverse navbar-fixed-top vr-nav-custom">
         <div class="container">
             <div class="navbar-header">
                 <img src="/Client/Images/logoonheader.png" class="minilogo" />
             </div>
             <div id="navbar">
 
-            </div><!--/.nav-collapse -->
+            </div>/.nav-collapse 
         </div>
-    </nav>
+    </nav>*@
     <div class="main">
         <div ng-include="'/Client/Modules/Security/Views/Login.html'"></div>
     </div>
