--- a/Vanrise/Code/Vanrise.Web/Client/Styles/TOnv2theme.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/TOnv2theme.css
@@ -186,7 +186,7 @@
 c0213f
 f27043
 806dbb
-3c9787
+4f7ac8
 e22337
 01a082
 f79624
@@ -206,22 +206,22 @@ f79624
     background-color :#806dbb;
 }
 .drill-down-level-4{
-    background-color :#3c9787;
+    background-color :#4f7ac8;
 }
 
 .drill-down-level-5{
-    background-color :#20407d;
+    background-color :#01a082;
 }
 .drill-down-level-6{
-    background-color :#c0213f;
+    background-color :#f79624;
 }
 .drill-down-level-7{
-    background-color :#f27043;
+    background-color :#9e1f63;
 }
 .drill-down-level-8{
-    background-color :#806dbb;
+    background-color :#0074d9;
 }
 .drill-down-level-9{
-    background-color :#3c9787;
+    background-color :#01a4b5;
 }
 
