--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/InstanceEditor.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/InstanceEditor.html
@@ -3,7 +3,7 @@
         <vr-form name="formCreateProcessInput">
             {{BPDefinitionObj.Configuration.Url}}
             <vr-row>
-                <div ng-include src="BPDefinitionObj.Configuration.Url">
+                <div ng-include src="'/Client/Modules/FraudAnalysis/Views/ExecuteStrategyProcessInput.html'">
                 </div>
             </vr-row>
         </vr-form>
