Implementing Widgets Management Page to insert new wiget with its settings
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24134

--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/DynamicPages/DynamicPagePreview.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/DynamicPages/DynamicPagePreview.html
@@ -23,9 +23,8 @@
     </vr-row>
         <div vr-loader="isGettingData">
             <vr-row>
-                <div class="list-group dragbelzone" ng-sortable="itemsSortable">
-                    <vr-columns ng-repeat="visualElement in visualElements" colnum="{{visualElement.numberOfColumns}}">
-                        <i class="glyphicon glyphicon-th-list handeldrag"></i>
+                <div class="list-group" ng-sortable="itemsSortable">
+                    <vr-columns ng-repeat="visualElement in visualElements" colnum="{{visualElement.numberOfColumns}}"> 
                         <vr-directivewrapper directive="visualElement.directive" on-ready="visualElement.onElementReady" settings="visualElement.settings"
                                              retrievedataonload="true" fromdate="fromDate" todate="toDate" timedimensiontype="selectedTimeDimensionType"></vr-directivewrapper>
                     </vr-columns>
