--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/WidgetsManagmentPage.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/WidgetsManagmentPage.html
@@ -1,14 +1,14 @@
-﻿<vr-panel ng-controller="Security_DynamicPagesManagementController">
+﻿<vr-panel ng-controller="Security_WidgetsManagementController">
     <vr-form name="formFilter">
         <div ng-hide="filterSectionCollapsed">
             <vr-row removeline>
                 <vr-columns colnum="2">
                     <vr-textbox value="name" label="Name"></vr-textbox>
-                   
+
                 </vr-columns>
             </vr-row>
             <vr-row></vr-row>
-        </div> 
+        </div>
         <vr-row removeline>
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
                 <div transclude-to="buttons">
@@ -23,10 +23,10 @@
 
         <vr-row>
             <vr-columns colnum="12">
-                <vr-datagrid datasource="data" menuactions="menuActions" on-ready="onMainGridReady">
+                <vr-datagrid datasource="widgets" menuactions="menuActions" on-ready="onMainGridReady">
                     <!--<vr-datagridcolumn headertext="ID" field="'data.ID'" widthfactor="20" isclickable="'true'" onclicked="onEntityClicked"></vr-datagridcolumn>-->
-                    <vr-datagridcolumn headertext="'Page Name'" field="'PageName'"></vr-datagridcolumn>
-                    <vr-datagridcolumn headertext="'Module Name'" field="'ModuleName'"></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Widget Name'" field="'Name'"></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Widget Type'" field="'WidgetDefinitionName'"></vr-datagridcolumn>
                 </vr-datagrid>
             </vr-columns>
         </vr-row>
