--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPTrackingModal.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPTrackingModal.html
@@ -1,22 +1,28 @@
 ﻿<div vr-modalcontent ng-controller="BusinessProcess_BPTrackingModalController">
-    <vr-modalbody width="'80%'" vr-loader="isGettingData">
+    <vr-modalbody width="'100%'" vr-loader="isGettingData">
         <vr-form name="formBPTrackingModal">
-            <div ng-hide="filterSectionCollapsed">
-                <vr-row removeline>
-                    <vr-columns colnum="6">
-                        <vr-textbox label="Message:" value="message"  ></vr-textbox>
-                    </vr-columns>
-                    <vr-columns colnum="6">
-                        <vr-select label="Severity" ismultipleselection hideselectedvaluessection="true" datatextfield="Description" datavaluefield="Value"
-                                   datasource="::trackingSeverity" selectedvalues="selectedTrackingSeverity" ></vr-select>
-                    </vr-columns>
-                </vr-row>
-                <vr-row>
-                </vr-row>
-            </div>
+
+            <vr-row removeline>
+                <vr-columns colnum="12">
+                    <h4><strong>{{process.Title}}</strong></h4>
+                    <small> {{process.Date | date:'yyyy-MM-dd hh:mm:ss' }}  {{process.Status}}</small>
+                </vr-columns>
+            </vr-row>
+
+            <vr-row removeline>
+                <vr-columns colnum="6">
+                    <vr-textbox label="Message:" value="message"></vr-textbox>
+                </vr-columns>
+                <vr-columns colnum="6">
+                    <vr-select label="Severity" ismultipleselection hideselectedvaluessection="true" datatextfield="Description" datavaluefield="Value"
+                               datasource="::trackingSeverity" selectedvalues="selectedTrackingSeverity"></vr-select>
+                </vr-columns>
+            </vr-row>
+            <vr-row>
+            </vr-row>
             <vr-row>
                 <vr-columns colnum="12">
-                    <vr-datagrid datasource="::datasource"  loadmoredata="loadMoreData" on-ready="onGridReady" clientsidefilter="filterGrid">
+                    <vr-datagrid datasource="::datasource" loadmoredata="loadMoreData" on-ready="onGridReady" clientsidefilter="filterGrid">
                         <vr-datagridcolumn headertext="'Message'" field="'Message'" widthfactor="50"></vr-datagridcolumn>
                         <vr-datagridcolumn headertext="'Severity'" field="'SeverityDescription'" widthfactor="20"></vr-datagridcolumn>
                         <vr-datagridcolumn headertext="'Event Time'" widthfactor="30">{{dataItem.EventTime | date:'yyyy-MM-dd hh:mm:ss' }}</vr-datagridcolumn>
