--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/DynamicPages/DynamicPagesManagement.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/DynamicPages/DynamicPagesManagement.html
@@ -25,7 +25,7 @@
             <vr-columns colnum="12">
                 <vr-datagrid datasource="data" menuactions="menuActions" on-ready="onMainGridReady">
                     <!--<vr-datagridcolumn headertext="ID" field="'data.ID'" widthfactor="20" isclickable="'true'" onclicked="onEntityClicked"></vr-datagridcolumn>-->
-                    <vr-datagridcolumn headertext="'Page Name'" field="'PageName'"></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Page Name'" field="'Name'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Module Name'" field="'ModuleName'"></vr-datagridcolumn>
                 </vr-datagrid>
             </vr-columns>
