--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReports.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReports.html
@@ -43,6 +43,30 @@
                 </vr-datagrid>
             </vr-columns>
         </vr-row>
+        <vr-row>            
+            <vr-columns colnum="12" >
+                <vr-datagrid >
+                    <vr-datagridcolumn headertext="'Total_AVG'" field="'TotalAverage'" type="'Number'"></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Total_%'" field="'summarydata.TotalPercentage'" type="'Number'"></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'TotalPrevious_%'" field="'summarydata.TotalPreviousPercentage'" type="'Number'"></vr-datagridcolumn>
+                    <!--<vr-datagridcolumn headertext="Total Values" ng-repeat="item in TotalValues" field="'Values[' + $index + ']'" type="'Number'"></vr-datagridcolumn>-->
+                </vr-datagrid>
+            </vr-columns>
+        </vr-row>
+        <vr-row>
+            <vr-columns colnum="2">
+                {{summarydata.TotalAverage}}
+            </vr-columns>
+            <vr-columns colnum="2">
+                {{summarydata.TotalPercentage}}
+            </vr-columns>
+            <vr-columns colnum="2">
+                {{summarydata.TotalPreviousPercentage}}
+            </vr-columns>
+            <vr-columns colnum="2">
+                {{summarydata.TotalValues}}
+            </vr-columns>
+        </vr-row>
     </div>
     <div vr-loader="isLoading">
         <vr-row>
