--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPDefinitionManagement.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPDefinitionManagement.html
@@ -29,17 +29,17 @@
                         <vr-datagridexpandablerow>
 
                             <vr-choices >
-                                <vr-choice isselected="ctrl.isRunningTabShown">Running Instances</vr-choice>
-                                <vr-choice isselected="ctrl.isScheduledTabShow">Scheduled Instances</vr-choice>
+                                <vr-choice isselected="dataItem.isRunningTabShown">Running Instances</vr-choice>
+                                <vr-choice isselected="dataItem.isScheduledTabShow">Scheduled Instances</vr-choice>
                             </vr-choices>
 
-                            <div ng-show="ctrl.isRunningTabShown">
+                            <div ng-show="dataItem.isRunningTabShown">
                                 <vr-datagrid datasource="dataItem.OpenedInstances">
                                     <vr-datagridcolumn headertext="'Title'" field="'Title'" isclickable="true" onclicked="viewScope.processInstanceClicked"></vr-datagridcolumn>
                                     <vr-datagridcolumn headertext="'Execution Status'" field="'StatusDescription'"></vr-datagridcolumn>
                                 </vr-datagrid>
                             </div>
-                            <div ng-show="ctrl.isScheduledTabShow">
+                            <div ng-show="dataItem.isScheduledTabShow">
                                 Schedule will be here
                             </div>
 
