--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReports.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReports.html
@@ -40,7 +40,9 @@
                     <vr-datagridcolumn headertext="'Previous_%'" field="'PreviousPeriodTypeValuePercentage'" type="'Number'"></vr-datagridcolumn>
                     <vr-datagridcolumn ng-repeat="item in timeRanges" field="'Values[' + $index + ']'" headertext="item" type="'Number'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'CarrierAccountID/ZoneID'" field="'ID'" ng-show="false"></vr-datagridcolumn> <!--ng-if="selectedReportOption.value==3 || selectedReportOption.value==7  "-->
-                </vr-datagrid>
+                    <vr-datagridexpandablerow> 
+                        <div ng-include="'/Client/Modules/Analytics/Views/Billing Statistics/VariationReports.html'"></div>
+                    </vr-datagrid>
             </vr-columns>
         </vr-row>
         <vr-row>            
@@ -49,7 +51,7 @@
                     <vr-datagridcolumn headertext="'Total_AVG'" field="'TotalAverage'" type="'Number'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Total_%'" field="'summarydata.TotalPercentage'" type="'Number'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'TotalPrevious_%'" field="'summarydata.TotalPreviousPercentage'" type="'Number'"></vr-datagridcolumn>
-                    <!--<vr-datagridcolumn headertext="Total Values" ng-repeat="item in TotalValues" field="'Values[' + $index + ']'" type="'Number'"></vr-datagridcolumn>-->
+                    <vr-datagridcolumn ng-repeat="item in TotalValues" field="'Values[' + $index + ']'" headertext="item" type="'Number'"></vr-datagridcolumn>
                 </vr-datagrid>
             </vr-columns>
         </vr-row>
@@ -63,7 +65,7 @@
             <vr-columns colnum="2">
                 {{summarydata.TotalPreviousPercentage}}
             </vr-columns>
-            <vr-columns colnum="2">
+            <vr-columns colnum="2"> Total Values
                 {{summarydata.TotalValues}}
             </vr-columns>
         </vr-row>
