Runtime Module - Scheduler Service - Impmeneting Workflow Action
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24171

--- a/Vanrise/Code/Vanrise.Runtime.Web/Runtime/Views/ActionTemplates/WFActionTemplate.html
+++ b/Vanrise/Code/Vanrise.Runtime.Web/Runtime/Views/ActionTemplates/WFActionTemplate.html
@@ -1,5 +1,8 @@
 ﻿<div ng-controller="Runtime_WFActionTemplateController">
     <vr-row>
-        <vr-textbox value="workflowName" label="Workflow Name"></vr-textbox>
+        <vr-select datatextfield="Name" datavaluefield="BPDefinitionID"
+                   datasource="bpDefinitions" selectedvalues="selectedBPDefintion"></vr-select>
+
+        <div ng-include="selectedBPDefintion.Configuration.ScheduleTemplateURL" />
     </vr-row>
 </div>
