Add Color to Grid
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24187

--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPManagement.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPManagement.html
@@ -40,8 +40,8 @@
                         <vr-datagridcolumn headertext="'Title'" field="'Title'" widthfactor="20" isclickable="'true'" onclicked="onTitleClicked"></vr-datagridcolumn>
                         <vr-datagridcolumn headertext="'Last Message'" field="'LastMessage'" widthfactor="60"></vr-datagridcolumn>
                         <vr-datagridcolumn headertext="'Retry'" field="'RetryCount'" widthfactor="5"></vr-datagridcolumn>
-                        <vr-datagridcolumn headertext="'Created Time'" widthfactor="10">{{dataItem.CreatedTime | date:'yyyy-MM-dd hh:mm:ss' }}</vr-datagridcolumn>
-                        <vr-datagridcolumn headertext="'Status'" field="'StatusDescription'" widthfactor="5"></vr-datagridcolumn>
+                        <vr-datagridcolumn headertext="'Created Time'" field="'CreatedTime'" type="'Datetime'" widthfactor="10"></vr-datagridcolumn>
+                        <vr-datagridcolumn headertext="'Status'" field="'StatusDescription'" widthfactor="5" getcolor="getStatusColor"></vr-datagridcolumn>
                     </vr-datagrid>
                 </vr-columns>
             </vr-row>
