vr-datagrid-cell overflow
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24200

--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -1154,7 +1154,7 @@ input.ui-grid-filter-input[type="text"] {
 .vr-datagrid-celltext {
     display: inline-block;
     width: 100%;
-    overflow: unset;
+    overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
